<resources>

    <string name="app_name">Vixtra</string>
    <string name="title_medicines">Remédios</string>
    <string name="title_historic">Histórico</string>
    <string name="title_add_medicine">Cadastrar</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="generic_save_success">Salvo!</string>
    <string name="generic_confirm">Confirmar</string>

    <string name="addmed_title">Cadastrar</string>
    <string name="addmed_medicine">Medicamento</string>
    <string name="addmed_description">Descrição</string>
    <string name="addmed_interval">Intervalo (horas)</string>
    <string name="addmed_start_date">Hora de início</string>
    <string name="addmed_repetition">Quantidade de repetição</string>

    <string name="takemed_confirm">Tem certeza que tomou o remédio?</string>

    <string name="error_required_field">Campo obrigatório</string>

    <string name="historic_daily">Diario</string>
    <string name="historic_weekly">Semanal</string>

    <array name="week_days">
        <item>Domingo</item>
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </array>

</resources>